Add rel="noreferrer" to links
Add rel="noreferrer" to external links

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="ieonly" style="display: none;">
         <h1>Beklager, men vi støtter ikke IE11 eller eldre nettlesere<br />Vennligst bytt til <a
-                href="https://www.mozilla.org/nb-NO/firefox/new/" alt="Firefox">Mozilla Firefox</a></h1>
+                href="https://www.mozilla.org/nb-NO/firefox/new/" alt="Firefox" rel="noreferrer">Mozilla Firefox</a></h1>
     </div>
     <div class="wrapper">
         <!-- Navigasjon -->
@@ -36,10 +36,12 @@
                     <a href="#om-meg" alt="Om meg" class="main-nav-ommeg hvr-overline-from-center">Om meg</a>
                 </li>
                 <li>
-                    <a href="./upload/CV.pdf" target="_blank" alt="CV" class="main-nav-cv hvr-overline-from-center">CV</a>
+                    <a href="./upload/CV.pdf" target="_blank" alt="CV" rel="noreferrer"
+                        class="main-nav-cv hvr-overline-from-center">CV</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/" target="_blank" alt="Kontakt" class="main-nav-kontakt hvr-overline-from-center">Kontakt</a>
+                    <a href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/" target="_blank" alt="Kontakt" rel="noreferrer"
+                        class="main-nav-kontakt hvr-overline-from-center">Kontakt</a>
                 </li>
             </ul>
         </nav>
@@ -55,9 +57,11 @@
 
             <div class="top-box top-box-a">
                 <h3>Github / Linkedin</h3>
-                <a href="https://github.com/w3bdesign" target="_blank" alt="Github"><i class="fab fa-github fa-4x"></i></a>
+                <a href="https://github.com/w3bdesign" target="_blank" alt="Github" rel="noreferrer"><i
+                        class="fab fa-github fa-4x"></i></a>
 
-                <a href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/" target="_blank" alt="Linkedin"><i class="fab fa-linkedin fa-4x"></i></a>
+                <a href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/" target="_blank" alt="Linkedin" rel="noreferrer"><i
+                        class="fab fa-linkedin fa-4x"></i></a>
 
 
             </div>
@@ -70,20 +74,21 @@
             <div class="boks">
 
                 <h3>Om meg</h3>
-                <a name="om-meg" alt="Om meg"></a> 
+                <a name="om-meg" alt="Om meg"></a>
                 <i class="fab fa-wordpress fa-4x"></i>
                 <i class="fab fa-js fa-4x"></i>
                 <i class="fab fa-html5 fa-4x"></i>
                 <i class="fab fa-css3 fa-4x"></i>
 
                 <p>Siden 2000 har jeg arbeidet med HTML, CSS, PHP og Javascript. Jeg har arbeidet med
-                    Wordpress og Woocommerce siden 2011 hvor jeg har arbeidet frilans via <a href="https://www.fiverr.com/w3bdesign" alt="Fiverr">Fiverr</a> og kan skilte med 100%
+                    Wordpress og Woocommerce siden 2011 hvor jeg har arbeidet frilans via <a
+                        href="https://www.fiverr.com/w3bdesign" rel="noreferrer" alt="Fiverr">Fiverr</a> og kan skilte med 100%
                     positiv tilbakemelding på samtlige oppdrag.</p>
-                    <p>Har også erfaring med Opencart og Magento.</p>
-                    
+                <p>Har også erfaring med Opencart og Magento.</p>
+
                 <p>De siste årene har jeg også satt meg inn i andre teknologier som React, moderne Javascript (ES6+),
                     Node.js, Firebase, Context, Redux, Axios, Docker med mer. </p>
-                    <p>Under kan du se eksempler på arbeid jeg har gjort i 2019 og 2020.</p>
+                <p>Under kan du se eksempler på arbeid jeg har gjort i 2019 og 2020.</p>
             </div>
         </section>
 
@@ -96,14 +101,16 @@
             <div class="boks port-1">
                 <i class="fab fa-js fa-4x"></i>
                 <h3>Statens Vegvesen</h3>
-                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen"></a><img src="./img/statens-vegvesen.jpg" alt="Statens Vegvesen bilde">
+                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen" rel="noreferrer"></a><img
+                    src="./img/statens-vegvesen.jpg" alt="Statens Vegvesen bilde">
                 <p>Henter kjøretøyinformasjon fra REST APIet hos https://www.vegvesen.no og viser det.</p>
                 <p>Inneholder: Standard Javascript, Materialize CSS, Input validering, Fetch API, jQuery.</p>
-                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen" class="btn hvr-sweep-to-top">Les mer</a>
+                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen" rel="noreferrer"
+                    class="btn hvr-sweep-to-top">Les mer</a>
             </div>
             <div class="boks port-2">
                 <i class="fab fa-js fa-4x"></i>
-                <h3>Flere prosjekter kommer</h3>                 
+                <h3>Flere prosjekter kommer</h3>
             </div>
             <!--
             <div class="boks port-3">
@@ -142,7 +149,7 @@
                 <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen" class="btn hvr-sweep-to-top">Les mer</a>
             </div>-->
 
-        </section>    
+        </section>
 
 
         <!-- Bunn / footer -->
