--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <body>
     <div class="ieonly" style="display: none;">
         <h1>Beklager, men vi støtter ikke IE11 eller eldre nettlesere<br />Vennligst bytt til <a
-                href="https://www.mozilla.org/nb-NO/firefox/new/" alt="Firefox" rel="noreferrer">Mozilla Firefox</a></h1>
+                href="https://www.mozilla.org/nb-NO/firefox/new/" alt="Firefox" rel="noreferrer">Mozilla Firefox</a>
+        </h1>
     </div>
     <div class="wrapper">
         <!-- Navigasjon -->
@@ -41,8 +42,8 @@
                         class="main-nav-cv hvr-overline-from-center">CV</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/" target="_blank" alt="Kontakt" rel="noreferrer"
-                        class="main-nav-kontakt hvr-overline-from-center">Kontakt</a>
+                    <a href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/" target="_blank" alt="Kontakt"
+                        rel="noreferrer" class="main-nav-kontakt hvr-overline-from-center">Kontakt</a>
                 </li>
             </ul>
         </nav>
@@ -61,8 +62,8 @@
                 <a href="https://github.com/w3bdesign" target="_blank" alt="Github" rel="noreferrer"><i
                         class="fab fa-github fa-4x"></i></a>
 
-                <a href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/" target="_blank" alt="Linkedin" rel="noreferrer"><i
-                        class="fab fa-linkedin fa-4x"></i></a>
+                <a href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/" target="_blank" alt="Linkedin"
+                    rel="noreferrer"><i class="fab fa-linkedin fa-4x"></i></a>
 
 
             </div>
@@ -83,7 +84,8 @@
 
                 <p>Siden 2000 har jeg arbeidet med HTML, CSS, PHP og Javascript. Jeg har arbeidet med
                     Wordpress og Woocommerce siden 2011 hvor jeg har arbeidet frilans via <a
-                        href="https://www.fiverr.com/w3bdesign" rel="noreferrer" alt="Fiverr">Fiverr</a> og kan skilte med 100%
+                        href="https://www.fiverr.com/w3bdesign" rel="noreferrer" alt="Fiverr">Fiverr</a> og kan skilte
+                    med 100%
                     positiv tilbakemelding på samtlige oppdrag.</p>
                 <p>Har også erfaring med Opencart og Magento.</p>
 
@@ -102,27 +104,28 @@
             <div class="boks port-1">
                 <i class="fab fa-js fa-4x"></i>
                 <h3>Statens Vegvesen</h3>
-                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen" rel="noreferrer"></a><img
-                    src="./img/statens-vegvesen.jpg" alt="Statens Vegvesen bilde">
+                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen"
+                    rel="noreferrer"></a><img src="./img/statens-vegvesen.jpg" alt="Statens Vegvesen bilde">
                 <p>Henter kjøretøyinformasjon fra REST APIet hos https://www.vegvesen.no og viser det.</p>
                 <p>Inneholder: Standard Javascript, Materialize CSS, Input validering, Fetch API, jQuery.</p>
-                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen" rel="noreferrer"
-                    class="btn hvr-sweep-to-top">Les mer</a>
+                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen"
+                    rel="noreferrer" class="btn hvr-sweep-to-top">Les mer</a>
             </div>
             <div class="boks port-2">
+                <i class="fab fa-js fa-4x"></i>
+                <h3>Nettbutikk i React</h3>
+                <a href="https://react-c776ed.netlify.com/" target="_blank" alt="Nettbutikk i React"></a><img
+                    src="./img/statens-vegvesen.jpg" alt="React Nettbutikk bilde">
+                <p>Nettbutikk laget i React med Google Firebase, Stripe, Redux, CSS in JS med mer. </p>
+                <a href="https://react-c776ed.netlify.com/" target="_blank" alt="Nettbutikk i React"
+                    class="btn hvr-sweep-to-top">Les mer</a>
+            </div>
+
+            <div class="boks port-3">
                 <i class="fab fa-js fa-4x"></i>
                 <h3>Flere prosjekter kommer</h3>
             </div>
             <!--
-            <div class="boks port-3">
-                <i class="fab fa-js fa-4x"></i>
-                <h3>Statens Vegvesen</h3>
-                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen"></a><img src="./img/statens-vegvesen.jpg" alt="Statens Vegvesen bilde">
-                <p>Henter kjøretøyinformasjon fra REST APIet hos https://www.vegvesen.no og viser det.</p>
-                <p>Inneholder: Standard Javascript, Materialize CSS, Input validering, Fetch API, jQuery.</p>
-                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen" class="btn hvr-sweep-to-top">Les mer</a>
-            </div>
-
             <div class="boks port-4">
                 <i class="fab fa-js fa-4x"></i>
                 <h3>Statens Vegvesen</h3>
