--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <i class="fab fa-js fa-4x"></i>
                 <h3>Nettbutikk i React</h3>
                 <a href="https://react-c776ed.netlify.com/" target="_blank" alt="Nettbutikk i React"></a><img
-                    src="./img/statens-vegvesen.jpg" alt="React Nettbutikk bilde">
+                    src="./img/nettbutikk.jpg" alt="React Nettbutikk bilde">
                 <p>Nettbutikk laget i React med Google Firebase, Stripe, Redux, CSS in JS med mer. </p>
                 <a href="https://react-c776ed.netlify.com/" target="_blank" alt="Nettbutikk i React"
                     class="btn hvr-sweep-to-top">Les mer</a>
