Fix broken links for portfolio

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <i class="fab fa-js fa-4x"></i>
                 <h3>Statens Vegvesen</h3>
                 <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen"
-                    rel="noreferrer"></a><img src="./img/statens-vegvesen.jpg" alt="Statens Vegvesen bilde">
+                    rel="noreferrer"><img src="./img/statens-vegvesen.jpg" alt="Statens Vegvesen bilde"></a>
                 <p>Henter kjøretøyinformasjon fra REST APIet hos https://www.vegvesen.no og viser det.</p>
                 <p>Inneholder: Standard Javascript, Materialize CSS, Input validering, Fetch API, jQuery.</p>
                 <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen"
@@ -114,8 +114,8 @@
             <div class="boks port-2">
                 <i class="fab fa-js fa-4x"></i>
                 <h3>Nettbutikk i React</h3>
-                <a href="https://react-c776ed.netlify.com/" target="_blank" alt="Nettbutikk i React"></a><img
-                    src="./img/nettbutikk.jpg" alt="React Nettbutikk bilde">
+                <a href="https://react-c776ed.netlify.com/" target="_blank" alt="Nettbutikk i React"><img
+                    src="./img/nettbutikk.jpg" alt="React Nettbutikk bilde"></a>
                 <p>Nettbutikk laget i React med Google Firebase, Stripe, Redux, CSS in JS med mer. </p>
                 <a href="https://react-c776ed.netlify.com/" target="_blank" alt="Nettbutikk i React"
                     class="btn hvr-sweep-to-top">Les mer</a>
