Add "inneholder" to portfolio

--- a/index.html
+++ b/index.html
@@ -114,9 +114,10 @@
             <div class="boks port-2">
                 <i class="fab fa-js fa-4x"></i>
                 <h3>Nettbutikk i React</h3>
-                <a href="https://react-c776ed.netlify.com/" target="_blank" alt="Nettbutikk i React"><img
-                    src="./img/nettbutikk.jpg" alt="React Nettbutikk bilde"></a>
-                <p>Nettbutikk laget i React med Google Firebase, Stripe, Redux, CSS in JS med mer. </p>
+                <a href="https://react-c776ed.netlify.com/" target="_blank" alt="Nettbutikk i React">
+                    <img src="./img/nettbutikk.jpg" alt="React Nettbutikk bilde"></a>
+                <p>Nettbutikk laget i React med Create React App. </p>
+                <p>Inneholder: React, Google Firebase, Stripe, Redux, CSS in JS, Reselect med mer.</p>
                 <a href="https://react-c776ed.netlify.com/" target="_blank" alt="Nettbutikk i React"
                     class="btn hvr-sweep-to-top">Les mer</a>
             </div>
