--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <a href="https://react-c776ed.netlify.com/" target="_blank" alt="Nettbutikk i React">
                     <img src="./img/nettbutikk.jpg" alt="React Nettbutikk bilde"></a>
                 <p>Nettbutikk laget i React med Create React App. </p>
-                <p>Inneholder: React, Google Firebase, Stripe, Redux, CSS in JS, Reselect med mer.</p>
+                <p>Inneholder: React, Firebase, Firestore, Stripe, Redux, CSS in JS, Reselect med mer.</p>
                 <a href="https://react-c776ed.netlify.com/" target="_blank" alt="Nettbutikk i React"
                     class="btn hvr-sweep-to-top">Les mer</a>
             </div>
