Update links to go to live site

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
             <div class="boks port-1">
                 <i class="fab fa-js fa-4x"></i>
                 <h3>Statens Vegvesen</h3>
-                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen"
+                <a href="https://sleepy-payne-cbfe8b.netlify.com/" target="_blank" alt="Statens Vegvesen"
                     rel="noreferrer"><img src="./img/statens-vegvesen.jpg" alt="Statens Vegvesen bilde"></a>
                 <p>Henter kjøretøyinformasjon fra REST APIet hos https://www.vegvesen.no og viser det.</p>
                 <p>Inneholder: Standard Javascript, Materialize CSS, Input validering, Fetch API, jQuery.</p>
-                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen"
+                <a href="https://sleepy-payne-cbfe8b.netlify.com/" target="_blank" alt="Statens Vegvesen"
                     rel="noreferrer" class="btn hvr-sweep-to-top">Les mer</a>
             </div>
             <div class="boks port-2">
