aria-labels added

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 
             <div class="top-box top-box-a">
                 <h3>Github / Linkedin</h3>
-                <a href="https://github.com/w3bdesign" target="_blank" alt="Github" rel="noreferrer"><i
+                <a href="https://github.com/w3bdesign" target="_blank" alt="Github" rel="noreferrer" aria-label="Github"><i
                         class="fab fa-github fa-4x"></i></a>
 
                 <a href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/" target="_blank" alt="Linkedin"
-                    rel="noreferrer"><i class="fab fa-linkedin fa-4x"></i></a>
+                    rel="noreferrer" aria-label="Linkedin"><i class="fab fa-linkedin fa-4x"></i></a>
 
 
             </div>
