Les mer = Besøk side

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <p>Henter kjøretøyinformasjon fra REST APIet hos https://www.vegvesen.no og viser det.</p>
                 <p>Inneholder: Standard Javascript, Materialize CSS, Input validering, Fetch API, jQuery.</p>
                 <a href="https://sleepy-payne-cbfe8b.netlify.com/" target="_blank" alt="Statens Vegvesen"
-                    rel="noreferrer" class="btn hvr-sweep-to-top">Les mer</a>
+                    rel="noreferrer" class="btn hvr-sweep-to-top">Besøk side</a>
             </div>
             <div class="boks port-2">
                 <i class="fab fa-js fa-4x"></i>
@@ -119,7 +119,7 @@
                 <p>Nettbutikk laget i React med Create React App. </p>
                 <p>Inneholder: React, Firebase, Firestore, Stripe, Redux, CSS in JS, Reselect med mer.</p>
                 <a href="https://react-c776ed.netlify.com/" target="_blank" alt="Nettbutikk i React"
-                    class="btn hvr-sweep-to-top">Les mer</a>
+                    class="btn hvr-sweep-to-top">Besøk side</a>
             </div>
 
             <div class="boks port-3">
