--- a/index.html
+++ b/index.html
@@ -1,132 +1,213 @@
 <!DOCTYPE html>
 <html lang="no">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="Description" content="Portefølje">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="Description" content="Portefølje" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
 
     <title>Portefølje</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="ieonly" style="display: none;">
-        <h1>Beklager, men vi støtter ikke IE11 eller eldre nettlesere<br />Vennligst bytt til <a
-                href="https://www.mozilla.org/nb-NO/firefox/new/" alt="Firefox" rel="noreferrer">Mozilla Firefox</a>
-        </h1>
+      <h1>
+        Beklager, men vi støtter ikke IE11 eller eldre nettlesere<br />Vennligst
+        bytt til
+        <a
+          href="https://www.mozilla.org/nb-NO/firefox/new/"
+          alt="Firefox"
+          rel="noreferrer"
+          >Mozilla Firefox</a
+        >
+      </h1>
     </div>
     <div class="wrapper">
-        <!-- Navigasjon -->
-        <nav class="main-nav">
-            <ul>
-                <li>
-                    <a href="#" alt="Hjem" class="main-nav-hjem hvr-overline-from-center">Hjem</a>
-                </li>
-                <li>
-                    <a href="#om-meg" alt="Om meg" class="main-nav-ommeg hvr-overline-from-center">Om meg</a>
-                </li>
-                <li>
-                    <a href="./upload/CV.pdf" target="_blank" alt="CV" rel="noreferrer"
-                        class="main-nav-cv hvr-overline-from-center">CV</a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/" target="_blank" alt="Kontakt"
-                        rel="noreferrer" class="main-nav-kontakt hvr-overline-from-center">Kontakt</a>
-                </li>
-            </ul>
-        </nav>
+      <!-- Navigasjon -->
+      <nav class="main-nav">
+        <ul>
+          <li>
+            <a
+              href="#"
+              alt="Hjem"
+              class="main-nav-hjem hvr-overline-from-center"
+              >Hjem</a
+            >
+          </li>
+          <li>
+            <a
+              href="#om-meg"
+              alt="Om meg"
+              class="main-nav-ommeg hvr-overline-from-center"
+              >Om meg</a
+            >
+          </li>
+          <li>
+            <a
+              href="./upload/CV.pdf"
+              target="_blank"
+              alt="CV"
+              rel="noreferrer"
+              class="main-nav-cv hvr-overline-from-center"
+              >CV</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
+              target="_blank"
+              alt="Kontakt"
+              rel="noreferrer"
+              class="main-nav-kontakt hvr-overline-from-center"
+              >Kontakt</a
+            >
+          </li>
+        </ul>
+      </nav>
 
-        <!-- Topp Kontainer -->
-        <section class="topp-kontainer">
-            <header class="showcase">
-                <h1>Hei!</h1>
-                <p>Jeg heter Daniel Fjeldstad og er en webutvikler som kan PHP, Wordpress, HTML, CSS, Javascript og mye
-                    mer.</p>
-                <p></p>
-            </header>
+      <!-- Topp Kontainer -->
+      <section class="topp-kontainer">
+        <header class="showcase">
+          <h1>Hei!</h1>
+          <p>
+            Jeg heter Daniel Fjeldstad og er en webutvikler som kan PHP,
+            Wordpress, HTML, CSS, Javascript og mye mer.
+          </p>
+          <p></p>
+        </header>
 
-            <div class="top-box top-box-a">
-                <h3>Github / Linkedin</h3>
-                <a href="https://github.com/w3bdesign" target="_blank" alt="Github" rel="noreferrer" aria-label="Github"><i
-                        class="fab fa-github fa-4x"></i></a>
+        <div class="top-box top-box-a">
+          <h3>Github / Linkedin</h3>
+          <a
+            href="https://github.com/w3bdesign"
+            target="_blank"
+            alt="Github"
+            rel="noreferrer"
+            aria-label="Github"
+            ><i class="fab fa-github fa-4x"></i
+          ></a>
 
-                <a href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/" target="_blank" alt="Linkedin"
-                    rel="noreferrer" aria-label="Linkedin"><i class="fab fa-linkedin fa-4x"></i></a>
+          <a
+            href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
+            target="_blank"
+            alt="Linkedin"
+            rel="noreferrer"
+            aria-label="Linkedin"
+            ><i class="fab fa-linkedin fa-4x"></i
+          ></a>
+        </div>
+      </section>
 
+      <!-- Bokser Seksjon -->
+      <section class="bokser">
+        <div id="boks" class="boks">
+          <h3>Om meg</h3>
+          <a name="om-meg" alt="Om meg"></a>
+          <i class="fab fa-wordpress fa-4x"></i>
+          <i class="fab fa-js fa-4x"></i>
+          <i class="fab fa-html5 fa-4x"></i>
+          <i class="fab fa-css3 fa-4x"></i>
 
-            </div>
+          <p>
+            Siden 2000 har jeg arbeidet med HTML, CSS, PHP og Javascript. Jeg
+            har arbeidet med Wordpress og Woocommerce siden 2011 hvor jeg har
+            arbeidet frilans via
+            <a
+              href="https://www.fiverr.com/w3bdesign"
+              rel="noreferrer"
+              alt="Fiverr"
+              >Fiverr</a
+            >
+            og kan skilte med 100% positiv tilbakemelding på samtlige oppdrag.
+          </p>
+          <p>Har også erfaring med Opencart og Magento.</p>
 
+          <p>
+            De siste årene har jeg også satt meg inn i andre teknologier som
+            React, moderne Javascript (ES6+), Node.js, Firebase, Context, Redux,
+            Axios, Docker med mer.
+          </p>
+          <p>
+            Under kan du se eksempler på arbeid jeg har gjort i 2019 og 2020.
+          </p>
+        </div>
+      </section>
 
-        </section>
+      <!-- Portefølje -->
+      <section class="portfolio-header">
+        <h3>Portefølje</h3>
+      </section>
 
-        <!-- Bokser Seksjon -->
-        <section class="bokser">
-            <div class="boks">
+      <section class="portfolio">
+        <div class="boks port-1">
+          <i class="fab fa-js fa-4x"></i>
+          <h3>Statens Vegvesen</h3>
+          <a
+            href="https://sleepy-payne-cbfe8b.netlify.com/"
+            target="_blank"
+            alt="Statens Vegvesen"
+            rel="noreferrer"
+            ><img src="./img/statens-vegvesen.jpg" alt="Statens Vegvesen bilde"
+          /></a>
+          <p>
+            Henter kjøretøyinformasjon fra REST APIet hos
+            https://www.vegvesen.no og viser det.
+          </p>
+          <p>
+            Inneholder: Standard Javascript, Materialize CSS, Input validering,
+            Fetch API, jQuery.
+          </p>
+          <a
+            href="https://sleepy-payne-cbfe8b.netlify.com/"
+            target="_blank"
+            alt="Statens Vegvesen"
+            rel="noreferrer"
+            class="btn hvr-sweep-to-top"
+            >Besøk side</a
+          >
+        </div>
+        <div class="boks port-2">
+          <i class="fab fa-js fa-4x"></i>
+          <h3>Nettbutikk i React</h3>
+          <a
+            href="https://react-c776ed.netlify.com/"
+            target="_blank"
+            alt="Nettbutikk i React"
+          >
+            <img src="./img/nettbutikk.jpg" alt="React Nettbutikk bilde"
+          /></a>
 
-                <h3>Om meg</h3>
-                <a name="om-meg" alt="Om meg"></a>
-                <i class="fab fa-wordpress fa-4x"></i>
-                <i class="fab fa-js fa-4x"></i>
-                <i class="fab fa-html5 fa-4x"></i>
-                <i class="fab fa-css3 fa-4x"></i>
+          <p>Nettbutikk laget i React med Create React App.</p>
+          <p>
+            Inneholder: React, Firebase, Firestore, Stripe, Redux, CSS in JS,
+            Reselect med mer.
+          </p>
+          <a
+            href="https://react-c776ed.netlify.com/"
+            target="_blank"
+            alt="Nettbutikk i React"
+            class="btn hvr-sweep-to-top"
+            >Besøk side</a
+          >
+        </div>
 
-                <p>Siden 2000 har jeg arbeidet med HTML, CSS, PHP og Javascript. Jeg har arbeidet med
-                    Wordpress og Woocommerce siden 2011 hvor jeg har arbeidet frilans via <a
-                        href="https://www.fiverr.com/w3bdesign" rel="noreferrer" alt="Fiverr">Fiverr</a> og kan skilte
-                    med 100%
-                    positiv tilbakemelding på samtlige oppdrag.</p>
-                <p>Har også erfaring med Opencart og Magento.</p>
-
-                <p>De siste årene har jeg også satt meg inn i andre teknologier som React, moderne Javascript (ES6+),
-                    Node.js, Firebase, Context, Redux, Axios, Docker med mer. </p>
-                <p>Under kan du se eksempler på arbeid jeg har gjort i 2019 og 2020.</p>
-            </div>
-        </section>
-
-        <!-- Portefølje -->
-        <section class="portfolio-header">
-            <h3>Portefølje</h3>
-        </section>
-
-        <section class="portfolio">
-            <div class="boks port-1">
-                <i class="fab fa-js fa-4x"></i>
-                <h3>Statens Vegvesen</h3>
-                <a href="https://sleepy-payne-cbfe8b.netlify.com/" target="_blank" alt="Statens Vegvesen"
-                    rel="noreferrer"><img src="./img/statens-vegvesen.jpg" alt="Statens Vegvesen bilde"></a>
-                <p>Henter kjøretøyinformasjon fra REST APIet hos https://www.vegvesen.no og viser det.</p>
-                <p>Inneholder: Standard Javascript, Materialize CSS, Input validering, Fetch API, jQuery.</p>
-                <a href="https://sleepy-payne-cbfe8b.netlify.com/" target="_blank" alt="Statens Vegvesen"
-                    rel="noreferrer" class="btn hvr-sweep-to-top">Besøk side</a>
-            </div>
-            <div class="boks port-2">
-                <i class="fab fa-js fa-4x"></i>
-                <h3>Nettbutikk i React</h3>
-                <a href="https://react-c776ed.netlify.com/" target="_blank" alt="Nettbutikk i React">
-                    <img src="./img/nettbutikk.jpg" alt="React Nettbutikk bilde"></a>
-                <p>Nettbutikk laget i React med Create React App. </p>
-                <p>Inneholder: React, Firebase, Firestore, Stripe, Redux, CSS in JS, Reselect med mer.</p>
-                <a href="https://react-c776ed.netlify.com/" target="_blank" alt="Nettbutikk i React"
-                    class="btn hvr-sweep-to-top">Besøk side</a>
-            </div>
-
-            <div class="boks port-3">
-                <i class="fab fa-js fa-4x"></i>
-                <h3>Flere prosjekter kommer</h3>
-            </div>
-            <!--
+        <div id="reveal1" class="boks port-3">
+          <i class="fab fa-js fa-4x"></i>
+          <h3>Flere prosjekter kommer</h3>
+        </div>
+        <!--
             <div class="boks port-4">
                 <i class="fab fa-js fa-4x"></i>
                 <h3>Statens Vegvesen</h3>
@@ -153,23 +234,26 @@
                 <p>Inneholder: Standard Javascript, Materialize CSS, Input validering, Fetch API, jQuery.</p>
                 <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen" class="btn hvr-sweep-to-top">Les mer</a>
             </div>-->
+      </section>
 
-        </section>
-
-
-        <!-- Bunn / footer -->
-        <footer>
-            <p>Daniel &copy; 2020</p>
-        </footer>
-
+      <!-- Bunn / footer -->
+      <footer>
+        <p>Daniel &copy; 2020</p>
+      </footer>
     </div>
     <!-- Wrapper Slutt -->
 
-    <!-- Inkluder GSAP for animasjoner -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.0.4/gsap.min.js"></script>
+     <!-- Inkluder GSAP for animasjoner -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.0.4/gsap.min.js"></script>
+
+    <!-- Inkluder ScrollMagic -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+    
+
+   
     <script src="./js/animation.js"></script>
 
-</body>
-
-
+    
+  </body>
 </html>
