--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </section>
 
       <section class="portfolio">
-        <div class="boks port-1">
+        <div id="reveal1" class="boks port-1">
           <i class="fab fa-js fa-4x"></i>
           <h3>Statens Vegvesen</h3>
           <a
@@ -178,7 +178,7 @@
             >Besøk side</a
           >
         </div>
-        <div class="boks port-2">
+        <div id="reveal2" class="boks port-2">
           <i class="fab fa-js fa-4x"></i>
           <h3>Nettbutikk i React</h3>
           <a
@@ -203,7 +203,7 @@
           >
         </div>
 
-        <div id="reveal1" class="boks port-3">
+        <div id="reveal3" class="boks port-3">
           <i class="fab fa-js fa-4x"></i>
           <h3>Flere prosjekter kommer</h3>
         </div>
@@ -237,7 +237,7 @@
       </section>
 
       <!-- Bunn / footer -->
-      <footer>
+      <footer id="reveal4">
         <p>Daniel &copy; 2020</p>
       </footer>
     </div>
