--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </nav>
 
       <!-- Topp Kontainer -->
-      <section class="topp-kontainer">
+      <section class="topp-kontainer reveal">
         <header class="showcase">
           <h1>Hei!</h1>
           <p>
@@ -88,7 +88,7 @@
           <p></p>
         </header>
 
-        <div class="top-box top-box-a">
+        <div class="top-box top-box-a reveal">
           <h3>Github / Linkedin</h3>
           <a
             href="https://github.com/w3bdesign"
@@ -111,7 +111,7 @@
       </section>
 
       <!-- Bokser Seksjon -->
-      <section class="bokser">
+      <section id="reveal" class="bokser reveal">
         <div id="boks" class="boks">
           <h3>Om meg</h3>
           <a name="om-meg" alt="Om meg"></a>
@@ -146,12 +146,12 @@
       </section>
 
       <!-- Portefølje -->
-      <section class="portfolio-header">
+      <section class="portfolio-header reveal">
         <h3>Portefølje</h3>
       </section>
 
       <section class="portfolio">
-        <div id="reveal1" class="boks port-1">
+        <div class="boks port-1 reveal">
           <i class="fab fa-js fa-4x"></i>
           <h3>Statens Vegvesen</h3>
           <a
@@ -178,7 +178,7 @@
             >Besøk side</a
           >
         </div>
-        <div id="reveal2" class="boks port-2">
+        <div class="boks port-2 reveal">
           <i class="fab fa-js fa-4x"></i>
           <h3>Nettbutikk i React</h3>
           <a
@@ -203,7 +203,7 @@
           >
         </div>
 
-        <div id="reveal3" class="boks port-3">
+        <div class="boks port-3 reveal">
           <i class="fab fa-js fa-4x"></i>
           <h3>Flere prosjekter kommer</h3>
         </div>
@@ -237,23 +237,19 @@
       </section>
 
       <!-- Bunn / footer -->
-      <footer id="reveal4">
+      <footer class="reveal">
         <p>Daniel &copy; 2020</p>
       </footer>
     </div>
     <!-- Wrapper Slutt -->
 
-     <!-- Inkluder GSAP for animasjoner -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.0.4/gsap.min.js"></script>
+    <!-- Inkluder GSAP for animasjoner -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.0.4/gsap.min.js"></script>
 
     <!-- Inkluder ScrollMagic -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
-    
 
-   
     <script src="./js/animation.js"></script>
-
-    
   </body>
 </html>
