New version of portfolio

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         bytt til
         <a
           href="https://www.mozilla.org/nb-NO/firefox/new/"
-          alt="Firefox"
+          title="Firefox"
           rel="noreferrer"
           >Mozilla Firefox</a
         >
@@ -41,24 +41,24 @@
           <li>
             <a
               href="#"
-              alt="Hjem"
+              title="Hjem"
               class="main-nav-hjem hvr-overline-from-center"
               >Hjem</a
             >
           </li>
           <li>
             <a
-              href="#om-meg"
-              alt="Om meg"
+              href="portefølje.html"
+              title="Om meg"
               class="main-nav-ommeg hvr-overline-from-center"
-              >Om meg</a
+              >Portefølje</a
             >
           </li>
           <li>
             <a
               href="./upload/CV.pdf"
               target="_blank"
-              alt="CV"
+              title="CV"
               rel="noreferrer"
               class="main-nav-cv hvr-overline-from-center"
               >CV</a
@@ -68,7 +68,7 @@
             <a
               href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
               target="_blank"
-              alt="Kontakt"
+              title="Kontakt"
               rel="noreferrer"
               class="main-nav-kontakt hvr-overline-from-center"
               >Kontakt</a
@@ -78,12 +78,12 @@
       </nav>
 
       <!-- Topp Kontainer -->
-      <section class="topp-kontainer reveal">
+       <section class="topp-kontainer reveal">
         <header class="showcase">
-          <h1>Hei!</h1>
+          <h2>Hei!</h2>
           <p>
             Jeg heter Daniel Fjeldstad og er en webutvikler som kan PHP,
-            Wordpress, HTML, CSS, Javascript og mye mer.
+            Wordpress, HTML, CSS, Javascript, React, Redux, Docker og mye mer.
           </p>
           <p></p>
         </header>
@@ -93,7 +93,7 @@
           <a
             href="https://github.com/w3bdesign"
             target="_blank"
-            alt="Github"
+            title="Github"
             rel="noreferrer"
             aria-label="Github"
             ><i class="fab fa-github fa-4x"></i
@@ -102,7 +102,7 @@
           <a
             href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
             target="_blank"
-            alt="Linkedin"
+            title="Linkedin"
             rel="noreferrer"
             aria-label="Linkedin"
             ><i class="fab fa-linkedin fa-4x"></i
@@ -111,10 +111,9 @@
       </section>
 
       <!-- Bokser Seksjon -->
-      <section id="reveal" class="bokser reveal">
+        <section id="reveal" class="bokser reveal">
         <div id="boks" class="boks">
-          <h3>Om meg</h3>
-          <a name="om-meg" alt="Om meg"></a>
+          <h3>Om meg</h3>          
           <i class="fab fa-wordpress fa-4x"></i>
           <i class="fab fa-js fa-4x"></i>
           <i class="fab fa-html5 fa-4x"></i>
@@ -127,7 +126,7 @@
             <a
               href="https://www.fiverr.com/w3bdesign"
               rel="noreferrer"
-              alt="Fiverr"
+              title="Fiverr"
               >Fiverr</a
             >
             og kan skilte med 100% positiv tilbakemelding på samtlige oppdrag.
@@ -135,106 +134,16 @@
           <p>Har også erfaring med Opencart og Magento.</p>
 
           <p>
-            De siste årene har jeg også satt meg inn i andre teknologier som
+            Jeg har også satt meg inn i andre teknologier som
             React, moderne Javascript (ES6+), Node.js, Firebase, Context, Redux,
             Axios, Docker med mer.
           </p>
           <p>
-            Under kan du se eksempler på arbeid jeg har gjort i 2019 og 2020.
+            På <a href="portefølje.html" title="Portefølje link" rel="noreferrer" aria-label="Portefølje link">Portefølje</a> kan du se eksempler på arbeid jeg har gjort i 2019 og 2020.
           </p>
         </div>
-      </section>
-
-      <!-- Portefølje -->
-      <section class="portfolio-header reveal">
-        <h3>Portefølje</h3>
-      </section>
-
-      <section class="portfolio">
-        <div class="boks port-1 reveal">
-          <i class="fab fa-js fa-4x"></i>
-          <h3>Statens Vegvesen</h3>
-          <a
-            href="https://sleepy-payne-cbfe8b.netlify.com/"
-            target="_blank"
-            alt="Statens Vegvesen"
-            rel="noreferrer"
-            ><img src="./img/statens-vegvesen.jpg" alt="Statens Vegvesen bilde"
-          /></a>
-          <p>
-            Henter kjøretøyinformasjon fra REST APIet hos
-            https://www.vegvesen.no og viser det.
-          </p>
-          <p>
-            Inneholder: Standard Javascript, Materialize CSS, Input validering,
-            Fetch API, jQuery.
-          </p>
-          <a
-            href="https://sleepy-payne-cbfe8b.netlify.com/"
-            target="_blank"
-            alt="Statens Vegvesen"
-            rel="noreferrer"
-            class="btn hvr-sweep-to-top"
-            >Besøk side</a
-          >
-        </div>
-        <div class="boks port-2 reveal">
-          <i class="fab fa-js fa-4x"></i>
-          <h3>Nettbutikk i React</h3>
-          <a
-            href="https://react-c776ed.netlify.com/"
-            target="_blank"
-            alt="Nettbutikk i React"
-          >
-            <img src="./img/nettbutikk.jpg" alt="React Nettbutikk bilde"
-          /></a>
-
-          <p>Nettbutikk laget i React med Create React App.</p>
-          <p>
-            Inneholder: React, Firebase, Firestore, Stripe, Redux, CSS in JS,
-            Reselect med mer.
-          </p>
-          <a
-            href="https://react-c776ed.netlify.com/"
-            target="_blank"
-            alt="Nettbutikk i React"
-            class="btn hvr-sweep-to-top"
-            >Besøk side</a
-          >
-        </div>
-
-        <div class="boks port-3 reveal">
-          <i class="fab fa-js fa-4x"></i>
-          <h3>Flere prosjekter kommer</h3>
-        </div>
-        <!--
-            <div class="boks port-4">
-                <i class="fab fa-js fa-4x"></i>
-                <h3>Statens Vegvesen</h3>
-                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen"></a><img src="./img/statens-vegvesen.jpg" alt="Statens Vegvesen bilde">
-                <p>Henter kjøretøyinformasjon fra REST APIet hos https://www.vegvesen.no og viser det.</p>
-                <p>Inneholder: Standard Javascript, Materialize CSS, Input validering, Fetch API, jQuery.</p>
-                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen" class="btn hvr-sweep-to-top">Les mer</a>
-            </div>
-
-            <div class="boks port-5">
-                <i class="fab fa-js fa-4x"></i>
-                <h3>Statens Vegvesen</h3>
-                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen"></a><img src="./img/statens-vegvesen.jpg" alt="Statens Vegvesen bilde">
-                <p>Henter kjøretøyinformasjon fra REST APIet hos https://www.vegvesen.no og viser det.</p>
-                <p>Inneholder: Standard Javascript, Materialize CSS, Input validering, Fetch API, jQuery.</p>
-                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen" class="btn hvr-sweep-to-top">Les mer</a>
-            </div>
-
-            <div class="boks port-6">
-                <i class="fab fa-js fa-4x"></i>
-                <h3>Statens Vegvesen</h3>
-                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen"></a><img src="./img/statens-vegvesen.jpg" alt="Statens Vegvesen bilde">
-                <p>Henter kjøretøyinformasjon fra REST APIet hos https://www.vegvesen.no og viser det.</p>
-                <p>Inneholder: Standard Javascript, Materialize CSS, Input validering, Fetch API, jQuery.</p>
-                <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen" class="btn hvr-sweep-to-top">Les mer</a>
-            </div>-->
-      </section>
+      </section>  
+      
 
       <!-- Bunn / footer -->
       <footer class="reveal">
