--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </nav>
 
       <!-- Topp Kontainer -->
-       <section class="topp-kontainer reveal">
+      <section class="topp-kontainer reveal">
         <header class="showcase">
           <h2>Hei!</h2>
           <p>
@@ -111,9 +111,9 @@
       </section>
 
       <!-- Bokser Seksjon -->
-        <section id="reveal" class="bokser reveal">
+      <section id="reveal" class="bokser reveal">
         <div id="boks" class="boks">
-          <h3>Om meg</h3>          
+          <h3>Om meg</h3>
           <i class="fab fa-wordpress fa-4x"></i>
           <i class="fab fa-js fa-4x"></i>
           <i class="fab fa-html5 fa-4x"></i>
@@ -134,16 +134,23 @@
           <p>Har også erfaring med Opencart og Magento.</p>
 
           <p>
-            Jeg har også satt meg inn i andre teknologier som
-            React, moderne Javascript (ES6+), Node.js, Firebase, Context, Redux,
-            Axios, Docker med mer.
+            Jeg har også satt meg inn i andre teknologier som React, moderne
+            Javascript (ES6+), Node.js, Firebase, Context, Redux, Axios, Docker
+            med mer.
           </p>
           <p>
-            På <a href="portefølje.html" title="Portefølje link" rel="noreferrer" aria-label="Portefølje link">Portefølje</a> kan du se eksempler på arbeid jeg har gjort i 2019 og 2020.
+            På
+            <a
+              href="portefølje.html"
+              title="Portefølje link"
+              rel="noreferrer"
+              aria-label="Portefølje link"
+              >Portefølje</a
+            >
+            kan du se eksempler på arbeid jeg har gjort i 2019 og 2020.
           </p>
         </div>
-      </section>  
-      
+      </section>
 
       <!-- Bunn / footer -->
       <footer class="reveal">
