--- a/portefølje.html
+++ b/portefølje.html
@@ -143,7 +143,10 @@
         <div class="boks port-4 reveal">
           <i class="fab fa-js fa-4x"></i>
           <h3>Style Child</h3>
-          <a href="https://www.stylechild.no/" target="_blank" title="Style Child"
+          <a
+            href="https://www.stylechild.no/"
+            target="_blank"
+            title="Style Child"
             ><img src="./img/stylechild.jpg" alt="Style Child bilde"
           /></a>
           <p>Nettbutikk med Woocommerce og Pckasse integrasjon.</p>
