Remove old Hover.css
Remove old Hover.css  and add effect into styles.scss

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="Description" content="Portefølje" />
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/styles.min.css" />
     <link
       rel="stylesheet"
       type="text/css"
@@ -39,18 +39,10 @@
       <nav class="main-nav">
         <ul>
           <li>
-            <a
-              href="#"
-              title="Hjem"
-              class="main-nav-hjem hvr-overline-from-center"
-              >Hjem</a
-            >
+            <a href="#" title="Hjem" class="main-nav-hjem fade">Hjem</a>
           </li>
           <li>
-            <a
-              href="portefølje.html"
-              title="Om meg"
-              class="main-nav-ommeg hvr-overline-from-center"
+            <a href="portefølje.html" title="Om meg" class="main-nav-ommeg fade"
               >Portefølje</a
             >
           </li>
@@ -60,7 +52,7 @@
               target="_blank"
               title="CV"
               rel="noreferrer"
-              class="main-nav-cv hvr-overline-from-center"
+              class="main-nav-cv fade"
               >CV</a
             >
           </li>
@@ -70,7 +62,7 @@
               target="_blank"
               title="Kontakt"
               rel="noreferrer"
-              class="main-nav-kontakt hvr-overline-from-center"
+              class="main-nav-kontakt fade"
               >Kontakt</a
             >
           </li>
