--- a/portefølje.html
+++ b/portefølje.html
@@ -42,7 +42,7 @@
             <a
               href="index.html"
               title="Hjem"
-              class="main-nav-hjem hvr-overline-from-center"
+              class="main-nav-hjem fade"
               >Hjem</a
             >
           </li>
@@ -50,7 +50,7 @@
             <a
               href="portefølje.html"
               title="Om meg"
-              class="main-nav-ommeg hvr-overline-from-center"
+              class="main-nav-ommeg fade"
               >Portefølje</a
             >
           </li>
@@ -60,7 +60,7 @@
               target="_blank"
               title="CV"
               rel="noreferrer"
-              class="main-nav-cv hvr-overline-from-center"
+              class="main-nav-cv fade"
               >CV</a
             >
           </li>
@@ -70,7 +70,7 @@
               target="_blank"
               title="Kontakt"
               rel="noreferrer"
-              class="main-nav-kontakt hvr-overline-from-center"
+              class="main-nav-kontakt fade"
               >Kontakt</a
             >
           </li>
@@ -106,7 +106,7 @@
             target="_blank"
             title="Statens Vegvesen"
             rel="noreferrer"
-            class="btn hvr-sweep-to-top"
+            class="btn fade"
             >Besøk side</a
           >
         </div>
@@ -130,7 +130,7 @@
             href="https://react-c776ed.netlify.com/"
             target="_blank"
             title="Nettbutikk i React"
-            class="btn hvr-sweep-to-top"
+            class="btn fade"
             >Besøk side</a
           >
         </div>
@@ -155,8 +155,8 @@
             href="https://www.stylechild.no/"
             target="_blank"
             title="Style Child"
-            class="btn hvr-sweep-to-top"
-            >Vis side</a
+            class="btn fade"
+            >Besøk side</a
           >
         </div>
 
@@ -178,8 +178,8 @@
             href="https://minhestebutikk.no/"
             target="_blank"
             title="Minhestebutikk"
-            class="btn hvr-sweep-to-top"
-            >Vis side</a
+            class="btn fade"
+            >Besøk side</a
           >
         </div>
         <!--
