Restructure SCSS into mixins and cleanup
We have moved several CSS rules into mixins and imported with @use

--- a/portefølje.html
+++ b/portefølje.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="Description" content="Portefølje" />
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="scss/styles.css" />
     <link
       rel="stylesheet"
       type="text/css"
