Added Contact form
Added Netlify Contact form styled with PureCSS minified with PureCSS (minified version).

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
       rel="stylesheet"
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
-    />    
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@0.6.0/modern-normalize.min.css">
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@0.6.0/modern-normalize.min.css"
+    />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -59,7 +62,7 @@
           </li>
           <li>
             <a
-              href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
+              href="kontakt.html"
               target="_blank"
               title="Kontakt"
               rel="noreferrer"
