--- a/portefølje.html
+++ b/portefølje.html
@@ -11,7 +11,10 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@0.6.0/modern-normalize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@0.6.0/modern-normalize.min.css"
+    />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -40,18 +43,12 @@
       <nav class="main-nav">
         <ul>
           <li>
-            <a
-              href="index.html"
-              title="Hjem"
-              class="main-nav-hjem fade"
+            <a href="index.html" title="Hjem" class="main-nav-hjem fade"
               >Hjem</a
             >
           </li>
           <li>
-            <a
-              href="portefølje.html"
-              title="Om meg"
-              class="main-nav-ommeg fade"
+            <a href="portefølje.html" title="Om meg" class="main-nav-ommeg fade"
               >Portefølje</a
             >
           </li>
@@ -67,7 +64,7 @@
           </li>
           <li>
             <a
-              href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
+              href="kontakt.html"
               target="_blank"
               title="Kontakt"
               rel="noreferrer"
