Add name to contact form

--- a/kontakt.html
+++ b/kontakt.html
@@ -95,13 +95,13 @@
               <label for="text">
                 Fullt navn
                 <br />
-                <input id="text" type="text" placeholder="Fullt navn" />
+                <input id="text" name="navn" type="text" placeholder="Fullt navn" />
               </label>
 
               <label for="phone"
                 >Telefon
                 <br />
-                <input id="phone" type="text" placeholder="Telefon" />
+                <input id="phone" name="telefon" type="text" placeholder="Telefon" />
               </label>
             </fieldset>
 
@@ -109,7 +109,7 @@
               <label for="textarea"
                 >Hva ønsker du å si?
                 <br />
-                <textarea id="textarea"></textarea>
+                <textarea name="tekst" id="textarea"></textarea>
               </label>
             </fieldset>
 
