Testing out Captcha

--- a/kontakt.html
+++ b/kontakt.html
@@ -89,6 +89,7 @@
             method="POST"
             data-netlify="true"
             class="pure-form"
+            data-netlify-recaptcha="true"
           >
             <fieldset class="pure-group">
               <h4>Vennligst fyll ut skjemaet under</h4>
@@ -114,6 +115,8 @@
             </fieldset>
 
             <button type="submit" class="btn fade">Send skjema</button>
+            <br/>
+            <div data-netlify-recaptcha="true"></div>
           </form>
         </div>
       </section>
