--- a/kontakt.html
+++ b/kontakt.html
@@ -115,7 +115,7 @@
             </fieldset>
 
             <button type="submit" class="btn fade">Send skjema</button>
-            <br/>
+            <br/>&nbsp;
             <div data-netlify-recaptcha="true"></div>
           </form>
         </div>
