--- a/kontakt.html
+++ b/kontakt.html
@@ -116,7 +116,7 @@
 
             <button type="submit" class="btn fade">Send skjema</button>
             <br/>&nbsp;
-            <div data-netlify-recaptcha="true"></div>
+            <div class="captcha" data-netlify-recaptcha="true"></div>
           </form>
         </div>
       </section>
