Add reveal to contact form

--- a/kontakt.html
+++ b/kontakt.html
@@ -82,7 +82,7 @@
         <h3>Kontaktskjema</h3>
       </section>
 
-      <section class="kontakt">
+      <section class="kontakt reveal">
         <div class="kontakt-div">
           <form
             name="kontaktskjema"
