Subheader on portfolio
Nedenfor ser du noen eksempler på nettsider jeg har arbeidet med i nyere tid. Merk at designet kan ha endret siden sist jeg arbeidet med siden.

--- a/portefølje.html
+++ b/portefølje.html
@@ -78,6 +78,10 @@
       <section class="portfolio-header reveal">
         <h3>Javascript / React</h3>
       </section>
+      
+      <section class="portfolio-header reveal">
+        <h4>Nedenfor ser du noen eksempler på nettsider jeg har arbeidet med i nyere tid. Merk at designet kan ha endret siden sist jeg arbeidet med siden. </h4>
+      </section>
 
       <section class="portfolio">
         <div class="boks port-1 reveal">
