--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </nav>
 
       <!-- Topp Kontainer -->
-      <section class="topp-kontainer reveal">
+      <section class="topp-kontainer">
         <header class="showcase">
           <h2>Hei!</h2>
           <p>
@@ -82,27 +82,7 @@
           </p>
           <p></p>
         </header>
-
-        <div class="top-box top-box-a reveal">
-          <h3>Github / Linkedin</h3>
-          <a
-            href="https://github.com/w3bdesign"
-            target="_blank"
-            title="Github"
-            rel="noreferrer"
-            aria-label="Github"
-            ><i class="fab fa-github fa-4x"></i
-          ></a>
-
-          <a
-            href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
-            target="_blank"
-            title="Linkedin"
-            rel="noreferrer"
-            aria-label="Linkedin"
-            ><i class="fab fa-linkedin fa-4x"></i
-          ></a>
-        </div>
+        
       </section>
 
       <!-- Bokser Seksjon -->
@@ -129,7 +109,7 @@
           <p>Har også erfaring med Opencart og Magento.</p>
 
           <p>
-            Jeg har også satt meg inn i andre teknologier som React, moderne
+            Jeg har også erfaring med andre teknologier som React, moderne
             Javascript (ES6+), Node.js, Firebase, Context, Redux, Axios, Docker
             med mer.
           </p>
@@ -145,6 +125,29 @@
             kan du se eksempler på arbeid jeg har gjort i 2019 og 2020.
           </p>
         </div>
+
+        <div class="top-box top-box-a reveal">
+          <h3>Github / Linkedin</h3>
+          <a
+            href="https://github.com/w3bdesign"
+            target="_blank"
+            title="Github"
+            rel="noreferrer"
+            aria-label="Github"
+            ><i class="fab fa-github fa-4x"></i
+          ></a>
+
+          <a
+            href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
+            target="_blank"
+            title="Linkedin"
+            rel="noreferrer"
+            aria-label="Linkedin"
+            ><i class="fab fa-linkedin fa-4x"></i
+          ></a>
+        </div>
+
+
       </section>
 
       <!-- Bunn / footer -->
