--- a/index.html
+++ b/index.html
@@ -145,6 +145,23 @@
             aria-label="Linkedin"
             ><i class="fab fa-linkedin fa-4x"></i
           ></a>
+          <p>
+          Jeg oppdaterer jevnlig min Github konto med nye prosjekter. Hvis du er interessert kan du ta en titt <a
+          href="https://github.com/w3bdesign"
+          target="_blank"
+          title="Github"
+          rel="noreferrer"
+          aria-label="Github"
+          > HER</a></p>
+                   
+          <p>Hvis du ønsker å se min oppdaterte CV kan du besøke min Linkedin konto 
+          <a
+            href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
+            target="_blank"
+            title="Linkedin"
+            rel="noreferrer"
+            aria-label="Linkedin"
+            > HER</a></p>
         </div>
 
 
