Made Kontakt mobile responsive

--- a/kontakt.html
+++ b/kontakt.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="Description" content="Portefølje" />
-    <link rel="stylesheet" type="text/css" href="scss/styles.css" />
+    <link rel="stylesheet" type="text/css" href="scss/styles.min.css" />
     <link
       rel="stylesheet"
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
-
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@0.6.0/modern-normalize.min.css"
@@ -46,9 +45,7 @@
       <nav class="main-nav">
         <ul>
           <li>
-            <a href="index.html" title="Hjem" class="main-nav-hjem fade"
-              >Hjem</a
-            >
+            <a href="index.html" title="Hjem" class="main-nav-hjem fade">Hjem</a>
           </li>
           <li>
             <a href="portefølje.html" title="Om meg" class="main-nav-ommeg fade"
