--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <i class="fab fa-css3 fa-4x"></i>
 
           <p>
-            Siden 2000 har jeg arbeidet med HTML, CSS, PHP og Javascript. Jeg
+            Siden 2000 har jeg arbeidet med HTML, CSS, PHP, mySQL og Javascript. Jeg
             har arbeidet med Wordpress og Woocommerce siden 2011 hvor jeg har
             arbeidet frilans via
             <a
