--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <header class="showcase">
           <h2>Hei!</h2>
           <p>
-            Jeg heter Daniel Fjeldstad og er en webutvikler som kan PHP,
+            Jeg heter Daniel Fjeldstad og er en webutvikler som kan PHP, mySQL, 
             Wordpress, HTML, CSS, Javascript, React, Redux, Docker og mye mer.
           </p>
           <p></p>
